Implement Facebook Login (Android)

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,3 +43,5 @@
 	<false/>
 </dict>
 </plist>
+<!-- TODO Facebook Login API -->
+<!-- https://pub.dartlang.org/packages/flutter_facebook_login#-readme-tab- -->
