--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   cupertino_icons: ^0.1.2
+  flutter_facebook_login: ^2.0.0
+  flutter_svg: ^0.12.4
 
 dev_dependencies:
   flutter_test:
