--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_facebook_login: ^2.0.0
   flutter_svg: ^0.12.4
+  fluttertoast: ^3.0.3
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +26,7 @@ flutter:
 
   assets:
     - res/drawable/
+    - res/values/
 
   # example:
   # fonts:
