Add some backbones
- Add Google Maps API
- Add Location API

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,7 +37,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.levelup.questrip"
+        applicationId "com.levelup.Questrip"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
