--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_facebook_login: ^2.0.0
   flutter_svg: ^0.12.4
   fluttertoast: ^3.0.3
+  google_maps_flutter: ^0.5.7
+  location: ^2.3.5
 
 dev_dependencies:
   flutter_test:
