--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -42,30 +42,46 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 
-	<!-- Facebook Login API -->
+
 	<key>CFBundleURLTypes</key>
     <array>
         <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLName</key>
+            <string></string>
             <key>CFBundleURLSchemes</key>
             <array>
                 <string>fb716742638722224</string>
+                <string>kakao7d42c6b44bbc964d95f1650f9fde9d40</string>
             </array>
         </dict>
     </array>
 
-    <key>FacebookAppID</key>
-    <string>716742638722224</string>
-
-    <key>FacebookDisplayName</key>
-    <string>Questrip</string>
-
     <key>LSApplicationQueriesSchemes</key>
     <array>
+        <!-- Facebook Login API -->
         <string>fbapi</string>
         <string>fb-messenger-share-api</string>
         <string>fbauth2</string>
         <string>fbshareextension</string>
+        <!-- Kakao Login API -->
+        <string>kakao7d42c6b44bbc964d95f1650f9fde9d40</string>
+        <string>kakaokompassauth</string>
+        <string>storykompassauth</string>
+        <string>kakaolink</string>
+        <string>storylink</string>
     </array>
+
+    <!-- Facebook Login API -->
+    <key>FacebookAppID</key>
+    <string>716742638722224</string>
+    <key>FacebookDisplayName</key>
+    <string>Questrip</string>
+
+    <!-- Kakao Login API -->
+    <key>KAKAO_APP_KEY</key>
+    <string>7d42c6b44bbc964d95f1650f9fde9d40</string>
 
     <!-- Google Maps API -->
     <key>io.flutter.embedded_views_preview</key>
