--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   flutter_facebook_login: ^2.0.0
+  flutter_kakao_login: ^0.1.1
   flutter_svg: ^0.12.4
   fluttertoast: ^3.0.3
   google_maps_flutter: ^0.5.7
