--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -69,5 +69,9 @@
         <!-- Google Maps API -->
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key"/>
+
+        <!-- Google Play Store Issue (known in 190420)
+            https://stackoverflow.com/questions/50461881 -->
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
     </application>
 </manifest>
