--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   fluttertoast: ^3.0.3
   google_maps_flutter: ^0.5.7
   location: ^2.3.5
+  photo_view: ^0.3.1
 
 dev_dependencies:
   flutter_test:
