--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   google_maps_flutter: ^0.5.7
   location: ^2.3.5
   photo_view: ^0.3.1
+  image_picker: ^0.6.0+3
+  image_gallery_saver: ^1.1.0
 
 dev_dependencies:
   flutter_test:
