--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   image_picker: ^0.6.0+3
   location: ^2.3.5
   photo_view: ^0.3.1
+  tuple: ^1.0.2
 
 dev_dependencies:
   flutter_test:
