--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,16 +13,16 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-  flutter_facebook_login: ^2.0.0
-  flutter_inappbrowser: ^1.1.1
-  flutter_kakao_login: ^0.3.0
-  flutter_svg: ^0.12.4
-  google_maps_flutter: ^0.5.7
-  image_gallery_saver: ^1.1.0
-  image_picker: ^0.6.0+3
+  flutter_facebook_login: ^3.0.0
+  flutter_inappbrowser: ^1.2.1
+  flutter_kakao_login: ^0.5.0
+  flutter_svg: ^0.14.4
+  google_maps_flutter: ^0.5.21
+  image_gallery_saver: ^1.2.2
+  image_picker: ^0.6.1
   location: ^2.3.5
-  photo_view: ^0.3.1
-  tuple: ^1.0.2
+  photo_view: ^0.8.0
+  tuple: ^1.0.3
 
 dev_dependencies:
   flutter_test:
